update layout and fix bug on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
     -o-transition: .15s all;
 }
 
+body {
+    overflow-x: none;
+}
+
 .night-mode {
     color: white !important;
     background: black !important;
